fix alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,4 @@
 body {
   background-color: paleturquoise;
-  text-align: center;
-  font-family: 'Staatliches', cursive;
+  font-family: 'Dancing Script', cursive;
 }
